--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.VideoSharedTransition" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.VideoSharedTransition" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_200</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
-		<item name="colorOnPrimary">@color/black</item>
-		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_200</item>
-		<item name="colorOnSecondary">@color/black</item>
+		<item name="colorPrimary">@color/primaryColorNight</item>
+		<item name="colorPrimaryVariant">@color/primaryDarkColorNight</item>
+		<item name="colorOnPrimary">@color/primaryTextColorNight</item>
+
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 		<!-- Customize your theme here. -->
+		<!-- enable window content transitions -->
+		<item name="android:windowActivityTransitions">true</item>
+		<!-- specify shared element transitions -->
+		<item name="android:windowSharedElementEnterTransition">
+			@transition/shared_player_transform</item>
+		<item name="android:windowSharedElementExitTransition">
+			@transition/shared_player_transform</item>
 	</style>
 </resources>
